# ma-proxy

./: .gitignore  ma.py  pyproject.toml  requirements.txt
src/: main.py
src/app/: messages.py
src/app/api/: application.py
src/app/api/routes/: root_router.py
src/app/api/routes/album/: __init__.py  models.py  router.py
src/app/api/routes/artists/: __init__.py  models.py  router.py
src/app/api/routes/auth/: __init__.py  models.py  router.py
src/app/api/routes/band/: __init__.py  models.py  router.py
src/app/api/routes/events/: __init__.py  router.py
src/app/api/routes/file_manager/: __init__.py  router.py
src/app/api/routes/lyrics/: __init__.py  models.py  router.py
src/app/api/routes/song/: __init__.py  models.py  router.py
src/app/api/routes/stats/: __init__.py  models.py  router.py
src/app/core/: config.py  security.py
src/app/middleware/: auth.py
src/app/models/: user.py
src/app/page_handler/: handler.py  models.py
src/app/page_handler/data_parser/: models.py  parser.py
src/app/sse/: manager.py
src/app/utils/: utils.py
