[project]
name = "metall-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Даниил Аммосов",email = "daniil.ammosov@x5.ru"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "seleniumbase (>=4.46.2,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
